@@ -29,6 +29,9 @@ Extensions Modules
 Library
 -------
 
+- Issue #2014: Allow XML-RPC datetime objects to have dates before
+  1900-01-01.
+
 - Issue #2439: Added new function pkgutil.get_data(), which is a
   convenience wrapper for the PEP 302 get_data() API.
 
